--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="app_name">Yamba_微博</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="titleStatus">Status Update</string>
-    <string name="hintText">Please enter your 140-character status</string>
-    <string name="buttonUpdate">Update</string>
+    <string name="titleStatus">有什么新鲜事要告诉大家</string>
+    <string name="hintText">发言请遵守社区公约，还剩下140个字！</string>
+    <string name="buttonUpdate">发送</string>
+    <string name="sendMessage">发送微博</string>
 
 </resources>
