--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,12 @@
     <string name="titleAbout">关于Yamba_微博</string>
     <string name="titleStartService">开启服务</string>
     <string name="titleStopService">关闭服务</string>
-    <string name="titleTimeline">时间轴</string>
+    <string name="titleTimeline">看看大家有什么新鲜事</string>
     <string name="titlePurge">清洗</string>
+    <string name="send_timeline_notifications_permission_description">发送通知权限描述</string>
+    <string name="send_timeline_notifications_permission_label">发送通知权限</string>
+    <string name="receive_timeline_notifications_permission_description">接收通知权限描述</string>
+    <string name="receive_timeline_notifications_permission_label">接收通知权限</string>
+    <string name="msgLastTimelineUpdate">最新消息</string>
 
 </resources>
